--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jointjs": "^2.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
+    "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
