--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jointjs": "^2.0.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
     "typescript": "^4.9.5",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.2.6",
-    "antd": "^5.13.1"
+    "antd": "^5.13.1",
+    "react-color": "^2.19.3"
   }
 }
